[package]
name = "dynasty"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/kaplanz/dynasty"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstream = "0.6.9"
anstyle = "1.0.4"
anyhow = "1.0.79"
async-compat = "0.2.3"
clap = { version = "4.4.18", features = ["wrap_help", "derive", "string"] }
clap-verbosity-flag = "2.1.2"
dirs = "5.0.1"
duration-str = "0.7.1"
env_logger = "0.10.2"
futures = "0.3.30"
log = "0.4.20"
reqwest = { version = "0.11.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
shlex = "1.2.0"
smol = "2.0.0"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.56"
toml = "0.8.8"
url = "2.5.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.5.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
